# picam

./: .gitignore  Cargo.toml  Cross.toml  Dockerbuilder  Dockerbuilder.arm  Makefile  README.md  index.html
debian/: control  picam.service  service
frontend/: index.html  init.html  login.html  picam.css
migrations/: 20250305211135_users.sql  20250305211245_pipeline_config.sql
migrations/2024-12-12-154727_users/: down.sql
src/: README.md  api_handlers.rs  config.rs  db.rs  file_sink.rs  frontend.rs  main.rs  models.rs  storage.rs  sys.rs  users.rs  video.rs
src/db/: models.rs  schema.rs
src/models/: file_sink_config.rs  pipeline_config.rs  users.rs
src/storage/: memory.rs  simple_observable.rs  sqlite.rs
