[package]
name = "webcam_streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.6", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
fs2 = "0.4.3"
futures-util = "0.3.30"
gstreamer = { version="0.23.0", default-features = false, features = [] }
gstreamer-app = { version="0.23.0", default-features = false, features = [] }
log = "0.4.22"
poem = { version = "3.1.5", features = ["cookie", "session", "static-files", "websocket"] }
poem-openapi = "5.1.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
v4l = "0.14.0"


[package.metadata.deb]
maintainer = "CommName"
copyright = "Apache License 2.0"
license-file = ["LICENSE", "4"]
extended-description = "Web cam streamer"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/webcam_streamer", "/usr/bin/", "755"],
    { source = "README.md", dest = "/usr/share/doc/webcam_streamer/README", mode = "644"},
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
