[package]
name = "picam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.86"
chrono = "0.4.38"
env_logger = "0.11.6"
fs2 = "0.4.3"
futures-util = "0.3.30"
glib = "0.20.7"
gstreamer = { version="0.23.0", default-features = false, features = [] }
gstreamer-app = { version="0.23.0", default-features = false, features = [] }
log = "0.4.22"
poem = { version = "3.1.5", features = ["cookie", "session", "static-files", "websocket"] }
poem-openapi = "5.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
v4l = "0.14.0"


[profile.release]
strip = true
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"